[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.5",
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.2",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-tavily>=0.2.11",
    "langchain[anthropic]>=0.3.27",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-supervisor>=0.0.29",
    "langsmith>=0.4.19",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
    "yfinance>=0.2.65",
]
